force-app/main/default/objects/Expertise_Assignment__c/Expertise_Assignment__c.object-meta.xml
<CustomObject>
    <description>1. Not integration relevant
2. ZRD
3. SF-726</description>
    <label>Fachkompetenz Zuordnung</label>
    <nameField>
        <displayFormat>EA-{00000}</displayFormat>
        <label>Expertise Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fachkompetenz Zuordnungen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>