force-app/main/default/objects/Expertise_Assignment__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. Field used to show the Email-Address of the related User</description>
    <formula>User__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>