force-app/main/default/objects/Expertise_Assignment__c/fields/Expertise__c.field-meta.xml
<CustomField>
    <fullName>Expertise__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-726</description>
    <label>Expertise</label>
    <referenceTo>Expertise__c</referenceTo>
    <relationshipLabel>Assigned Users</relationshipLabel>
    <relationshipName>Expertise_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>