force-app/main/default/objects/Expertise_Assignment__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. Field is used to show the Mobile Number of the related User</description>
    <formula>User__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>