force-app/main/default/objects/Expertise_Assignment__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. Helper Field, to display the User Name instead of the Autonumber on related Lists</description>
    <formula>HYPERLINK(&quot;/lightning/r/Expertise_Assignment__c/&quot;+ User__r.Id +&quot;/view&quot;,  User__r.FirstName  + &quot; &quot; +  User__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>