force-app/main/default/objects/Expertise_Assignment__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>1. Not integration relevant
2. ZRD
3. SF-726</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Expertise_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>